<resources>
    <string name="app_name">Walking School Bus</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Monitoring/Monitored Strings-->
    <string name="currently_monitoring">Currently Monitoring:</string>
    <string name="user_s_email">User\'s Email</string>
    <string name="add_a_user_to_monitor">Add a user to monitor</string>
    <string name="long_press_user_to_stop_monitoring">Long press user to stop monitoring</string>
    <string name="currently_monitored_by">Currently monitored by:</string>
    <string name="add_user_to_monitor_me">Add user to monitor me</string>
    <string name="long_press_user_to_stop_being_by_them">Long press user to stop being by them</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="stop_monitoring_a_user">Stop monitoring a user</string>
    <string name="stop_a_user_from_monitoring_me">Stop a user from monitoring me</string>
    <string name="see_who_i_monitor">See Who I Monitor</string>
    <string name="see_who_monitors_me">Monitors</string>

    <!--Main Menu Strings-->
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hello_please_log_in_or_create_an_account">Hello! Please Log In or Create an Account</string>
    <string name="logout">LOGOUT</string>

    <!--Group Strings-->
    <string name="groupTitle">Group Name</string>
    <string name="manage_groups">My Groups</string>
    <string name="welcome_to_the_walking_school_bus_app">Welcome to the Walking School Bus App!</string>
    <string name="leave_group">Leave Group</string>
    <string name="enter_group_you_want_to_leave">Enter Group You Want To Leave</string>
    <string name="group_id">Group ID</string>
    <string name="userGroupsView">\'s Groups:</string>
    <string name="return_to_who_i_monitor">Return to Who I Monitor</string>
    <string name="enter_group_to_be_removed_from">Enter Group To Be Removed From</string>
    <string name="remove_from_group">Remove From Group</string>
    <string name="my_groups">My Groups:</string>

    <!--Sign Up Strings-->
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="create_your_password">Create Your Password</string>
    <string name="please_enter_your_credentials">Please Enter Your Credentials</string>
    <string name="press_a_user_to_remove_them_from_a_group">Press a user to remove them from a group or long press to edit</string>

    <!--Generic Strings-->
    <string name="hi">Hi</string>
    <string name="join">join</string>
    <string name="map">Map</string>
    <string name="remove">Remove</string>
    <string name="finish">Finish</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!--Map Strings-->
    <string name="apiKey">A4A59288-25B8-4586-B736-6F453957C8BE</string>
    <string name="saveGroup">Save New Group</string>
    <string name="joinGroup">Join Group</string>
    <string name="addUserToGroup">Add A User to Group</string>
    <string name="title_activity_maps">Map</string>
    <string name="fragmentTitle">Custom Waypoint</string>
    <string name="markerTitleLabel">Marker Title</string>
    <string name="marketTypeLabel">Type of Marker</string>


    <string-array name="months_array">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>


    <string-array name="grades_array">
        <item>Grade</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="storeGreetingMsg">Welcome to the points store! \n Here you can spend your points on avatars and backgrounds.</string>

    <string name="parents_dashboard">Parents Dashboard</string>
    <string name="back">Back</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="view_older_messages">View Older Messages</string>
    <string name="send_a_message">Send A Message</string>
    <string name="send_a_message_as_a_leader">send a message as a leader</string>
    <string name="send_a_message_as_a_user">Send a message as a user</string>
    <string name="enter_message">Enter Message:</string>
    <string name="send_message">Send Message</string>
    <string name="send_to_parents">Send To Parents</string>
    <string name="send_to_selected_group">Send To Selected Group</string>
    <string name="enter_your_message">Enter Your Message:</string>
    <string name="send_message_to_group_leader">Send Message To group Leader</string>
    <string name="send_message_to_parents">Send Message To Parents</string>
    <string name="title_activity_parent_maps">Map</string>
    <string name="messages">Messages</string>
    <string name="emergency">EMERGENCY</string>
    <string name="emergency_message">EMERGENCY MESSAGE</string>
    <string name="send">SEND</string>
    <string name="you_are_the_leader_of_the_following_groups">You are the leader of the following groups</string>
    <string name="groups_i_lead">Groups I Lead</string>
    <string name="new_teacher_s_name">New Teacher\'s Name</string>
    <string name="textview">TextView</string>
    <string name="edit_your_info">Edit Your Info</string>
    <string name="new_address">New Address</string>
    <string name="done">Done</string>
    <string name="new_home_phone_number">New Home Phone Number</string>
    <string name="new_cellphone_number">New Cellphone Number</string>
    <string name="new_teacher_s_name_edit">New Teacher\'s Name</string>
    <string name="edit_birth_day_mm_yy">Edit Birth Day (MM/YY)</string>
    <string name="new_emergency_info">New Emergency Info</string>
    <string name="new_name">New Name</string>
    <string name="edit_my_info">Edit my Info</string>
    <string name="emergency_messages_will_appear_below">Emergency messages will appear below</string>
    <string name="messages_parent_dash">Messages:</string>
    <string name="users_in_group">Users in group</string>
    <string name="view_users_location">View Users Location</string>
    <string name="next">next</string>
    <string name="optional_info">Optional Info</string>
    <string name="address">Address</string>
    <string name="teacher_s_name">Teacher\'s Name</string>
    <string name="home_phone_number">Home Phone Number</string>
    <string name="cellphone_number">Cellphone Number</string>
    <string name="birthday_mm_yy">Birthday (MM/YY)</string>
    <string name="join_with_optional_info">Join</string>
    <string name="emergency_info">Emergency Info</string>
    <string name="my_groups_press_and_hold_on_a_group_to_set_it_as_your_current_group">My Groups, press and hold on a group to set it as your current group</string>
    <string name="emergency_sent">Message Sent:</string>
    <string name="emergency_notext">Message has no text. Message not sent.</string>
    <string name="manage_current_group">Current Group is:</string>
    <string name="left_group_manage">Left Group.</string>
    <string name="Enter_group_id_manage">Please enter a Group ID</string>
    <string name="joined_group_map">Joined Group!</string>
    <string name="add_marker_at_map">Adding marker at</string>
    <string name="message_read_messaging">Message now read.</string>
    <string name="No_Group_ID_Monitored">Please enter a Group ID</string>
    <string name="remove_from_group_monitored">Removed from group.</string>
    <string name="parent_fragment_user_info_title">User Info</string>
    <string name="sending_messaging_activity_clicked">Clicked</string>
    <string name="sending_message_activity_Message">Message:</string>
    <string name="sending_message_activity_you_must_leader">You must select a group you lead</string>
    <string name="sending_message_activity_no_text_message">Message has no text. Message not sent.</string>
    <string name="sending_message_activity_message_can_be_sent">Message has no text. Message not sent.</string>
    <string name="send_userMessage_activity_message_body">Message has no text. Message not sent.</string>
    <string name="R.string.send_userMessage_activity_you_must_leader">You must select a group you lead</string>
    <string name="parent_map_activity">Please allow device location</string>
    <string name="leader_boards">Leader Boards</string>
    <string name="action_settings">Settings</string>
    <string name="do_you_want_grant_permission_for_this_action">Do you want grant permission for this action?</string>
    <string name="do_you_want_to_grant_permission_for_this_action">Do you want to grant permission for this action?</string>
</resources>
