<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="project.cmpt276.androidui.walkingschoolbus.mainMenu"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/goToMap"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="16dp"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/manageGroupsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/whoIMonitorBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.909" />

    <Button
        android:id="@+id/whoIMonitorBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="79dp"
        android:layout_marginStart="16dp"
        android:text="@string/see_who_i_monitor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/goToMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutBtn" />

    <Button
        android:id="@+id/whoMonitorsMeBtn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="17dp"
        android:text="@string/see_who_monitors_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/manageGroupsBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whoIMonitorBtn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="314dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/whoIMonitorBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manageGroupsBtn"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/manage_groups"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/whoMonitorsMeBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="116dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="73dp"
        android:text="@string/welcome_to_the_walking_school_bus_app"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/manageGroupsBtn"
        app:layout_constraintEnd_toEndOf="@+id/goToMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
