<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.cmpt276.androidui.walkingschoolbus.MapsActivity"
    tools:layout="@layout/activity_maps" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:gravity="bottom|left"
        android:layout_gravity="bottom|left">

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveGroup"
            android:id="@+id/btnSaveGroup"
            android:padding="10dp"
            android:paddingRight="10dp"/>

            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joinGroup"
            android:id="@+id/btnJoinGroup"
            android:padding="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addUserToGroup"
            android:id="@+id/btnAddUserToGrp"
            android:padding="10dp"
            android:paddingRight="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/refreshMapsBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:drawableStart="@android:drawable/stat_notify_sync"
        android:gravity="top|left"
        android:textAlignment="center" />
</fragment>